# cmk

./: .env.example  CODE_REVIEW.md  DESIGN_REVIEW.md  README.md  pyproject.toml  render.yaml
.github/workflows/: publish.yml
dashboard/: Dockerfile  package.json  pnpm-lock.yaml
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/app/(auth)/sign-in/[[...sign-in]]/: page.tsx
dashboard/src/app/(auth)/sign-out/[[...sign-out]]/: page.tsx
dashboard/src/app/(auth)/sign-up/[[...sign-up]]/: page.tsx
dashboard/src/app/(dashboard)/dashboard/: page.tsx
dashboard/src/app/(dashboard)/dashboard/setup/: page.tsx
dashboard/src/app/(marketing)/product/: page.tsx
dashboard/src/app/(marketing)/security/: page.tsx
dashboard/src/app/api/v1/synthesize/: route.ts
dashboard/src/components/: auth-provider.tsx  marketing-nav.tsx  mode-badge.tsx  onboarding-modal.tsx  user-button.tsx
dashboard/src/components/marketing/: hero.tsx  local-first.tsx
dashboard/src/lib/: auth-client.ts  auth.ts
migrations/: 001_cmk_tables.sql
plugin/hooks/: hooks.json
src/claude_memory_kit/: __init__.py  auth.py  auth_keys.py  cli.py  cli_auth.py  config.py  extract.py  server.py  types.py
src/claude_memory_kit/api/: app.py
src/claude_memory_kit/flow/: __init__.py  compress.py  hook.py  transcript.py
src/claude_memory_kit/store/: __init__.py  postgres.py  qdrant_store.py  sqlite.py
src/claude_memory_kit/tools/: forget.py  recall.py  remember.py
tests/: conftest.py  test_api.py  test_auth_config_types.py  test_auth_store_extract.py  test_cli.py  test_consolidation.py  test_coverage_gaps.py  test_flow.py  test_server.py  test_sqlite.py
